<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/foot_print_memory"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/main_margin_left"
        android:layout_marginRight="@dimen/main_margin_right"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/et_foot_name_height"
            android:background="@drawable/et_foot_name_bg"
            android:layout_marginTop="@dimen/main_item_top"
            android:id="@+id/etFootPrintName"
            android:maxLength="10"
            android:layout_gravity="center"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:gravity="center"
            android:hint="@string/hint_foot_print_name"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/main_item_top"
            android:textColor="@color/black"
            android:text="@string/tv_foot_print_desc"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/main_item_top"
            android:textColor="@color/black"
            android:text="@string/tv_fre_reminder"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnNever"
            android:layout_marginTop="@dimen/main_item_top"
            android:layout_gravity=""
            android:textAllCaps="false"
            android:gravity="left|center"
            android:text="@string/btn_never"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/main_item_top"
            android:textColor="@color/black"
            android:text="@string/tv_date_reminder"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnSetReminder"
            android:layout_marginTop="@dimen/main_item_top"
            android:gravity="left|center"
            android:textAllCaps="false"
            android:text="@string/btn_set_reminder"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/main_item_right"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/main_item_top"
            android:orientation="horizontal">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/btnCancel"
                android:text="@string/btn_cancel"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnSave"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/btn_save"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>